--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,19 @@ name = "pypi"
 bootstrap-flask = "*"
 flask = "*"
 markdown = "*"
-flask-wiki = {editable = true, path = "."}
 flask-wtf = "*"
+flask-babel = "*"
 
 [dev-packages]
+check-manifest = "*"
+ipython = "*"
 
 [requires]
 python_version = "3.6"
+
+[scripts]
+extract_messages = "pipenv run pybabel extract --project Flask-Wiki -F babel.cfg -k gettext -k lazy_gettext -o flask_wiki/translations/messages.pot flask_wiki"
+init_catalog = "pybabel init -i flask_wiki/translations/messages.pot -d flask_wiki/translations -l "
+compile_catalog = "pybabel compile -d flask_wiki/translations"
+update_catalog = "pybabel update -i flask_wiki/translations/messages.pot -d flask_wiki/translations"
+serve = "flask run"
