misc: fix install and configuration
* makes this module usable for external app

Signed-off-by: Johnny Mariéthoz <johnny.mariethoz@rero.ch>

--- a/Pipfile
+++ b/Pipfile
@@ -8,11 +8,14 @@ bootstrap-flask = "*"
 flask = "*"
 markdown = "*"
 flask-wtf = "*"
-flask-babel = "*"
+babel = "*"
+flask-babelex = "*"
+flask-wiki = {editable = true, path = "."}
 
 [dev-packages]
 check-manifest = "*"
 ipython = "*"
+"autopep8" = "*"
 
 [requires]
 python_version = "3.6"
